Finished recreating app, squashed bugs

--- a/style.css
+++ b/style.css
@@ -11,7 +11,13 @@
 
 .searchBar {
     margin: 15px 0px 15px 0px;
-}.card {
+}
+
+.btn-block {
+    margin: 5px 0px 5px 0px;
+}
+
+.card {
     margin: 15px;
     width: 130px;
     height: 180px;
